summary lasso chapters and clustered lasso2

--- a/thesis/3a-clustering-methods.Rmd
+++ b/thesis/3a-clustering-methods.Rmd
@@ -1,4 +1,4 @@
-## Clustering Methods
+## Clustering Methods {#clustering-methods}
 
 ### $k$-means
 In the following we briefly describe the $k$-means procedure.
