--- a/thesis/lasso-summary-cluster-2.rmd
+++ b/thesis/lasso-summary-cluster-2.rmd
@@ -1,4 +1,4 @@
-#### Cluster 2
+#### Cluster 2 {#cl2}
 
 ```{r, include=FALSE}
 knitr::opts_chunk$set(echo=FALSE, warning = FALSE, message = FALSE, out.width = '50%', fig.align = 'center')
