--- a/thesis/ref-lib.bib
+++ b/thesis/ref-lib.bib
@@ -191,3 +191,10 @@ urldate = {05-08-22}
   year={1996},
   publisher={Wiley Online Library}
 }
+
+@article{cleveland1992local,
+  title={Local regression models. Chapter 8 in Statistical models in S (JM Chambers and TJ Hastie eds.), 608 p},
+  author={Cleveland, WS and Grosse, E and Shyu, WM},
+  journal={Wadsworth \& Brooks/Cole, Pacific Grove, CA},
+  year={1992}
+}
