--- a/thesis/1a-related-work.Rmd
+++ b/thesis/1a-related-work.Rmd
@@ -9,8 +9,8 @@ Figure \@ref(fig:cross) shows the cross degree towards rainfall in the central A
 The correlations are measured using a spearman rank-order correlation coefficient.
 
 \begin{equation}
- \rho = 1 - \frac{6\sum\Delta_{R_i}^2}{n(n^2-1)}  .
- (\#eq:spearman-rank)
+ \rho = 1 - \frac{6\sum\Delta_{R_i}^2}{n(n^2-1)} .
+(\#eq:spearman-rank)
 \end{equation}
 
 Where $\Delta_{R_i}$ denotes the difference between the ranks of observations of both variables at the same time $i$ and $n$ is the number of observations.
@@ -28,7 +28,7 @@ k_{i}^{lm} = \sum\limits_{j \in V_m} A_{ij}, i \in V_l\  .
 (\#eq:cross-deg)
 \end{equation}
 
-```{r cross, echo = FALSE, fig.align = 'center', out.width = '50%', fig.cap='"Cross degree between sea surface temperature and continental rainfall anomalies. For each sea surface temperature grid cell of the Atlantic and Pacific Ocean, the cross degree towards rainfall in the Central Amazon Basin (blue box) is shown, for a positive correlations and b negative correlations. Darker shading indicates a larger cross degree, implying a larger number of links, and thus significant correlations with rainfall at more grid points in the Central Amazon Basin. Red areas outline coherent oceanic regions with a the 20 highest cross degrees for positive correlations, found in the Southern Pacific Ocean (SPO) and Southern Tropical Atlantic Ocean (STAO), and b the 20 highest cross degrees for negative correlations, found in the Central Pacific Ocean (CPO) and Northern Tropical Atlantic Ocean (NTAO)" (Ciemer et al. (2020))'}
+```{r cross, echo = FALSE, fig.align = 'center', out.width = '50%', fig.cap='Cross degree between sea surface temperature and continental rainfall anomalies. For each sea surface temperature grid cell of the Atlantic and Pacific Ocean, the cross degree towards rainfall in the Central Amazon Basin (blue box) is shown, for a positive correlations and b negative correlations. Darker shading indicates a larger cross degree, implying a larger number of links, and thus significant correlations with rainfall at more grid points in the Central Amazon Basin. Red areas outline coherent oceanic regions with a the 20\\% highest cross degrees for positive correlations, found in the Southern Pacific Ocean (SPO) and Southern Tropical Atlantic Ocean (STAO), and b the 20\\% highest cross degrees for negative correlations, found in the Central Pacific Ocean (CPO) and Northern Tropical Atlantic Ocean (NTAO) (Ciemer et al. (2020))'}
 knitr::include_graphics("../figures/cross-degree.jpg")
 ```
 
@@ -37,17 +37,17 @@ Then they took the average of the cross correlations for each of the networks wh
 Each ACC summarizes the connectivity of one region with the CAB for the last 24 months.  
 They found that NTAO and STAO gave the strongest signal, hence they applied the same sliding window coupled network approach between the ocean regions NTAO and STAO.
 Before they computed networks between ocean and continental regions, now it is computed between these two Atlantic regions, NTAO and STAO.  
-The resulting time series and its comparison to the drought index time series is shown in figure \@ref(fig:early) below.
+The resulting time series and its comparison to the drought index time series is shown in figure \@ref(fig:early).
 They fund that using a ACC threshold for a drought (SPI below -1.5), lets them
 forecast 6 of the 7 droughts in the observation period, missing the 2005 drought, while also giving one false alarm in 2002. 
 
-```{r early, echo = FALSE, fig.align='center' ,out.width="75%", fig.cap='"Early-warning signal for droughts in the central Amazon basin. We compare the time evolution of the average cross correlation of the Northern Tropical Atlantic Ocean (NTAO) and Southern Tropical Atlantic Ocean (STAO), given by the blue curve, with the standardized precipitation index (SPI, orange) of the central Amazon basin. Orange dips indicate a negative SPI with a threshold for severely dry periods (SPI -1, dotted red line). We expect a drought event within the following one and a half years whenever the average cross correlation between NTAO and STAO SST anomalies falls below an empirically found threshold of -0.06. Green circles indicate a matching forecast based on the Atlantic SST correlation structure, with one false alarm in 2002 indicated by a grey circle, where the threshold is crossed but no drought took place in the direct aftermath (see Discussion). The temporal evolution of the average cross correlation shown here is smoothed using a Chebyshev type-I low-pass filter with a cutoff at 24 months" (Ciemer et al. (2020)).'}
+```{r early, echo = FALSE, fig.align='center' ,out.width='75%', fig.cap='Early-warning signal for droughts in the central Amazon basin. We compare the time evolution of the average cross correlation of the Northern Tropical Atlantic Ocean (NTAO) and Southern Tropical Atlantic Ocean (STAO), given by the blue curve, with the standardized precipitation index (SPI, orange) of the central Amazon basin. Orange dips indicate a negative SPI with a threshold for severely dry periods (SPI -1, dotted red line). We expect a drought event within the following one and a half years whenever the average cross correlation between NTAO and STAO SST anomalies falls below an empirically found threshold of -0.06. Green circles indicate a matching forecast based on the Atlantic SST correlation structure, with one false alarm in 2002 indicated by a grey circle, where the threshold is crossed but no drought took place in the direct aftermath (see Discussion). The temporal evolution of the average cross correlation shown here is smoothed using a Chebyshev type-I low-pass filter with a cutoff at 24 months (Ciemer et al. (2020)).'}
 knitr::include_graphics("../figures/early-warning-signals.jpg")
 ```
 
 
 The work by @ciemer2020early shows potential forecasting capabilities and limitations.
-While they were able to predict 5 out of 6 drought events, they also gave one false negative and one false positive result. Their work used a complex network approach that was applied stepwise (first two unweighted networks, then two weighted networks 
+While they were able to predict 5 out of 6 drought events, they also gave one false negative and one false positive result. Their work used a complex network approach that was applied stepwise (first two unweighted networks, then two weighted networks
 and in the end a dichotomous threshold decision rule). For the thesis we would like
 to create a more general predictive model that can learn the relationship between the
 SSTs and rainfall in the CAB. As already mentioned a first step will be a lasso model. First findings showed that, the classic lasso only chooses single points in the ocean as predictors, though. But our motivation is to discover predictive regions and not only single separated points.
