--- a/thesis/5tt-results-fused-lasso.Rmd
+++ b/thesis/5tt-results-fused-lasso.Rmd
@@ -67,24 +67,42 @@ we can observe that nodes with fewer edges obtain larger coefficient values
 in general.
 Following we will summarize these findings.
 
-## Results
-
-### Fused lasso
-
-
 ```{r graph-plot}
+library(igraph)
 k <- readRDS("../data/processed/graph_sst.rds")
+cl <- clusters(k)
 plot(k, vertex.label = NA, vertex.size=0.00001,
           edge.width= 0.0001,
           vertex.color=cl$membership*10)
 ```
 
-
 ## Results
 
-Before showing the results for the fus
+Computing the fused lasso solution path is computationally very expensive.
+We therefore had to choose strategically which model variations we will
+investigate.
+From the lasso we found that apart from standardizing, neither de-seasonalizing,
+nor differentiating the coefficients improved predictive performance on the validation set.
+We therefore started with the fused lasso on the original data (without standardization).
+As we described earlier, the relation between graph structure, subgraphs (i.e cluster) and its influence on the results is not trivial.
+After fitting the fused lasso on the original data and graph, we also fitted
+the fused lasso with original data on the graph without clusters.
+Comparing these models already showed us a hint that removing the clusters
+can improve the predictions, but after all it's only a minor solution, because
+differences in connectivenes in the graph is still existing.
+For the sake of completeness we also tried standardizing the data for
+the normal and the graph without clusters, none of these two approaches was 
+better than the "plain" fused lasso version without clusters.
+Eventually we inspected the influence of sparsity on the results, with
+values $\gamma = 0.1$, which did not improve predictions on the validation set.
+The predictions seemed to underfit and therefore we choose lower regularization
+parameter $\gamma = 0.05$, again without improvement.
+We therefore only present the results of the best model and refer
+for the other models to the appendix.
 
-### Fused lasso 
+
+
+### Fused lasso without clusters
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(warning = FALSE, message = FALSE, echo = FALSE)
@@ -101,8 +119,7 @@ source("../code/R/helper-functions.R")
 ```
 
 ```{r}
-path_to_model_folder <- "../results/CV-fused/large-fused-5k/"
-# h is here 5000
+path_to_model_folder <- "../results/CV-fused/noclust-large-fused-5k/"
 ```
 
 ```{r}
@@ -170,14 +187,40 @@ mse_full <- get_mse_from_pred_plot(full_preds)
 full_preds
 mse_full
 ```
+On first sight the predictions don't change a lot compared to the lasso model (\@ref(fig:pred-plot-full-lasso-og)),
+but the fused lasso here can predict the evaluation data best so far. (MSE is `r mse_full`,
+see \@ref(fig:pred-plot-full-fused-og)). 
+We can see that the low values at the end of season 2 and 5 (around month 1363 and 1400),
+are better predicted than in the standard lasso.
+Also the fused lasso predicts the seasonality amplitudes slightly better.
+The resulting coefficient plot is given in figure \@ref(fig:coef-plot-full-fused-og).
+As expected the fused lasso assign the same coefficients for areas rather
+instead just for single points. 
+When comparing to the coefficient plot from the lasso \@ref(fig:coef-plot-full-lasso-og),
+we see that some areas are included in both models,
+for example the positive coefficients around the area Gulf of Guinea,
+as well as the negative values around Chile and Peru. In the fused lasso
+plot the latter values are smaller in relation to the large negative values 
+in the Baltic sea.
+We note that the largest negative and positive values occur in regions,
+that have few edges in the graph.
+We assume that in a fully connected graph, with weights according to distances
+these values would not be as large (relatively to other coefficient values) because they too would be more penalized than for the graph we created from the lattice structure.
+
+
 ```{r coef-plot-full-fused-og, eval=FALSE, fig.cap="Coefficient plot of the full fused lasso model."}
 coef_plot <- readRDS(paste0(path_to_model_folder,
-                     "coef-plots/coef-plot-full.rds"))
-#coef_plot <- coef_plot + theme(legend.position = "bottom", text = element_text(size = 8))
+                      "coef-plots/coef-plot-full.rds"))
+head(coef_plot)
+coef_plot + aes(colours=)
 coef_plot$layers[[2]]$aes_params$size <- 0.75
-coef_plot_now <- coef_plot
-coef_plot_now <- coef_plot_now + scale_colour_gradient2(name="Coefficients")
-ggsave(paste0(path_to_model_folder, "coef-plots/coef-plot-full.png"), plot = coef_plot_now)
+coef_plot$
+coef_plot <- coef_plot + theme(legend.position = "bottom", text = element_text(size = 8))
+coef_plot + geom_point(show.legend = TRUE)
+coef_plot$labels$colour <- "Coefficients"
+coef_plot$data
+# coef_plot_now <- coef_plot
+# ggsave(paste0(path_to_model_folder, "coef-plots/coef-plot-full.png"), plot = coef_plot_now)
 ```
 ```{r}
 knitr::include_graphics(paste0(path_to_model_folder, "coef-plots/coef-plot-full.png"))
@@ -191,9 +234,39 @@ knitr::include_graphics(paste0(path_to_model_folder, "coef-plots/coef-plot-full.
 # coef_plot_now2 <- coef_plot_now2 + scale_colour_gradient2(name="Coefficients")
 #ggsave(paste0(path_to_model_folder, "coef-plots/coef-plot-drop-out-full.png"), plot = coef_plot_now2)
 knitr::include_graphics(paste0(path_to_model_folder, "coef-plots/coef-plot-drop-out-full.png"))
-
 ```
 
 
-
+## Summary 
+After fitting different possible fused lasso models, we find that
+the the using the graph without separated clusters on the standard SST data
+without regularization worked best.
+Regularization did not improve the perfmance on the validation set.
+Our interpretation of the findings is that on one hand the fused lasso
+chooses coefficients that are also apparent in the lasso results.
+The lasso chooses rather single points and discards the rest of a homogeneous area.
+The fused lasso chooses the area and distributes the coefficient value
+evenly. But the fused lasso does so by penalizing the differences of neighboring
+coefficients. How strongly these are penalized depends on their distance that
+is defined by a graph (but could also be defined by a penalty matrix directly).
+We chose to represent the SST structure as lattice and removed nodes that 
+correspond to land.
+While doing so, areas that have only few direct connections to the large sea cluster, the 
+connections get eventually cut off, leaving behind the clusters we saw earlier.
+This gives the impression that the clusters are not connected at all to the larger SST
+cluster. The Caspian Sea for example occurred as separated cluster, it could have also been
+a cluster in the Arctic, the fused lasso has no information anymore about its location
+if its a sub-graph. From a physical perspective this makes of course little sense.
+One possible solution for this might be to define fully connected graph with
+weights according to geographical distance.
+If the square root of weights are used in defining the penalty matrix,
+$D^TD$ is still the Laplacian and could be used to fit the fused lasso model.
+One caveat here is that the runtime of the *fusedlasso* increases with the number of edges,
+which would increase runtime here drastically.
+Another possible solution would be to minimize the SST "window" under study (for
+example as in @ciemer2020 early.)
+Our initial motivation was to investigate the global connections between
+SST and precipitation, but to reduce computational costs for the fused lasso
+it would be practical and investigate the behaviour of weighted fully connected
+graphs it would be an interesting point of future research.
 
