--- a/thesis/1bb-EDA-sst.Rmd
+++ b/thesis/1bb-EDA-sst.Rmd
@@ -5,14 +5,13 @@ output:
 ---
 ## EDA SST
 
-We explore the sea surface temperature data set, used in the paper by Ciemer et al (@ciemer2020early). 
-ERSST (Extended Reconstructed Sea Surface Temperature, @huang2017noaa) is a reanalysis from observed data given in the International Comprehensive Ocean-Athmosphere Data Set (ICOADS). Which contains observations *from 1800 until 2016*, made by ships and buoys for example.
-The data comes on a 2x2 degree grid, where data was missing interpolation techniques were used.
-See paper for reference.
-the file contains two variables that are measured across different dimensions.
-The two variables contain the sea surface temperatures and the respective SST anomalies (with respect to the 1971-2000 monthly climatology). Here we analyze the raw SST values, since the anomalies
-are computed to a climatology that spans a time frame we will use
-in the analysis. Using the anomalies therefore would eventually introduce information leakage because during the training process future values were used for fitting the model.
+We explore the sea surface temperature data set used in the paper by @ciemer2020early. 
+ERSST (Extended Reconstructed Sea Surface Temperature, @huang2017noaa) is a reanalysis of observed data given in the International Comprehensive Ocean-Atmosphere Data Set (ICOADS), which contains observations *from 1800 until 2016*, made by ships and buoys, for example.
+The data comes on a 2x2 degree grid, where data was missing they used interpolation techniques.
+The file contains two variables that are measured across different dimensions.
+The two variables consist of the sea surface temperatures and the respective SST anomalies (with respect to the 1971-2000 monthly climatology). Here we analyze the raw SST values since they compute the anomalies compared to a climatology that spans a time frame we will use
+in the analysis. Therefore, the anomlies would eventually introduce information
+leakage because future values were used for fitting the model during the trainin process.
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(echo=FALSE, warning = FALSE, message = FALSE,
@@ -34,14 +33,21 @@ library(ggpubr)
 source("../code/R/helper-functions.R")
 ```
 
-```{r, out.width='50%'}
+```{r sst-dens, out.width='50%'}
 sst_dens_plot <- readRDS("../results/eda/sst_dens_plot.rds")
 sst_dens_plot <- sst_dens_plot + ggtitle("Density of raw SST values") +
   ylab("Density") + xlab("SST")
 sst_dens_plot
 ```
 
-```{r}
+As first impression of the SST data we show the density of the raw values (Figure \@ref(fig:sst-dens)).
+A large proportion of the data has temperatures around the null,
+which we can account to the sea regions close to the Antarctic. Temperatures
+between 0 and 20 degrees are rather evenly distributed, for tropical 
+monthly SST the number of observations increases again.
+
+
+```{r, }
 sst_means_loc_plot <- readRDS("../results/eda/sst_means_loc_plot.rds")
 sst_means_loc_plot <- sst_means_loc_plot + ggtitle(NULL)
 sst_means_loc_plot$labels$fill <- "Mean"
@@ -52,28 +58,36 @@ sst_means_loc_plot <- sst_means_loc_plot + scale_fill_gradient2(low = "blue", hi
 (sst_mean_dens_plot <- readRDS("../results/eda/sst_means_dens_plot.rds"))
 ```
 
-
-```{r, fig.cap="SST standard deviation at each location. The standard deviation was computed over the whole time period"}
+```{r, fig.cap="SST standard deviation at each location. We computed the standard deviation over the whole time period"}
 sst_sds_loc_plot <- readRDS("../results/eda/sst_sds_loc_plot.rds")
 #sst_sds_loc_plot$labels$fill <- "SD"
 # sst_sds_loc_plot <- sst_sds_loc_plot + scale_fill_gradient2(low = "blue", high = "red", midpoint=mean(sst_sds_loc_plot$data$val, na.rm=TRUE))
 ```
 
-```{r, eval = FALSE, fig.cap="Density of standard deviations, standard deviations were computed for each location over the whole time period"}
+```{r, eval = FALSE, fig.cap="Density of standard deviations, we computed the standard deviations for each location over the whole time period"}
 (sst_sds_dens_plot <- readRDS("../results/eda/sst_sds_dens_plot.rds"))
 ```
 
 
-```{r mean-and-sd-sst-og, fig.cap="Mean and SD on the spatial map."}
+```{r mean-and-sd-sst-og, fig.cap="Mean and SD on the global map.The color scales show the mean for the shown variable as white.",  out.width='50%'}
 sst_means_loc_plot + sst_sds_loc_plot +
   plot_annotation("Global SST mean and SD at each location")
 ```
+Figure \@ref(fig:mean-and-sst-og) displays the mean and standard deviation
+on each location for the complete observation period.
+The mean of each scale is shown in white. Hence on average the SST regions
+have a mean of around 12 degrees and the respective standard deviation is on
+average 2. While the temperature means appear to be change smoothly along
+the latitudes, the standard deviations have stronger local patterns. SST regions close to the coastlines at 50° latitude show the highest standard deviations.
+
+We further inspect the SD patterns in Figure \@ref(fig:sst-sd-month),
+and detect a prominent region around the equator in the Pacific.
+Its standard deviation is highest in January and is referred to as the spatial 
+center of the El Nino-Souther Oscillation (ENSO) (@ciemer2020early).
 
 ```{r, eval = FALSE}
 (sst_mean_dens_plot + ggtitle("Density of means")) + (sst_sds_dens_plot + ggtitle("Density of sd"))
 ```
-
-
 
 ```{r, eval = FALSE, include=FALSE}
 a <- readRDS("../results/eda/sst_trends_loc_lm_plot.rds")
@@ -85,15 +99,11 @@ a + b
 (sst_trends_loc_stl_plot <- readRDS("../results/eda/sst_trends_loc_stl_plot.rds"))
 ```
 
-```{r,  out.width='120%'}
+```{r eval = FALSE, sst-mean-month,  out.width='120%'}
 sst_mean_arrange <- readRDS("../results/eda/sst_mean_arrange.rds")
 sst_mean_arrange
 ```
 
-We see spatial patterns of the mean evolving over time.
-For example: From May until August there is a spatial separation in
-two parts that dissolves in september.
-As expected there is a large seasonal component regarding the means.
 
 
 ```{r, include = FALSE}
@@ -103,13 +113,9 @@ As expected there is a large seasonal component regarding the means.
 ```
 
 
-```{r, out.width='120%'}
+```{r, sst-sd-month, fig.cap= "SST standard deviation at each location, shown for the different months of a year separately. The white line on the scale at the side of the plots indicates the mean of the respective quantity", out.width='120%'}
 (sst_sd_arrange <- readRDS("../results/eda/sst_sd_arrange.rds"))
 ```
-
-For the standard deviation we see as well large differences in values 
-during different months of the year.
-
 
 ```{r, eval = FALSE}
 (sst_trend_arrange <- readRDS("../results/eda/sst_trend_arrange.rds"))
