--- a/thesis/ref-lib.bib
+++ b/thesis/ref-lib.bib
@@ -198,3 +198,14 @@ urldate = {05-08-22}
   journal={Wadsworth \& Brooks/Cole, Pacific Grove, CA},
   year={1992}
 }
+
+@article{cleveland1990stl,
+  title={STL: A seasonal-trend decomposition},
+  author={Cleveland, Robert B and Cleveland, William S and McRae, Jean E and Terpenning, Irma},
+  journal={J. Off. Stat},
+  volume={6},
+  number={1},
+  pages={3--73},
+  year={1990}
+}
+
