--- a/thesis/5tt-results-fused-lasso.Rmd
+++ b/thesis/5tt-results-fused-lasso.Rmd
@@ -141,7 +141,7 @@ path_to_model_folder <- "../results/CV-fused/noclust-large-fused-5k/"
 #        p2)
 ```
 
-```{r err-line-fused-og, out.width='45%'}
+```{r err-line-fused-noclust, out.width='45%'}
 knitr::include_graphics(paste0(path_to_model_folder, "best-lambda-res.png"))
 ```
 
@@ -173,7 +173,7 @@ mse_5 <- get_mse_from_pred_plot(pred_plot_5)
 
 #pred_plot_list <- list(pred_plot_1,pred_plot_2,pred_plot_3,pred_plot_4,pred_plot_5)
 ```
-```{r pred-fold-fused-og,fig.cap="Precipitation prediction and target values in the test set in each fold. Predictions in red and target values in black."}
+```{r pred-fold-fused-noclust,fig.cap="Precipitation prediction and target values in the test set in each fold. Predictions in red and target values in black."}
 pred_plot_1 + pred_plot_2 + pred_plot_3 + pred_plot_4 +
   pred_plot_5
 ```
@@ -181,7 +181,7 @@ The predictions inside the folds are very similar to lasso without standardizati
 (see \@ref(fig:pred-plot-fold-lasso-og)), the same holds for the predictions from
 the full model, but the MSE improves here (@\ref(fig:pred-plot-full-fused-og).
 
-```{r pred-plot-full-fused-og, fig.cap="Precipitation prediction and target values in the validation set. Predictions in red and target values in black. The model was fitted on the full CV data with the lambda value that minimised the average MSE"}
+```{r pred-plot-full-fused-noclust, fig.cap="Precipitation prediction and target values in the validation set. Predictions in red and target values in black. The model was fitted on the full CV data with the lambda value that minimised the average MSE"}
 full_preds <- readRDS(paste0(path_to_model_folder, "/pred-plots/pred-plot-full.rds"))
 mse_full <- get_mse_from_pred_plot(full_preds)
 full_preds
@@ -208,7 +208,7 @@ We assume that in a fully connected graph, with weights according to distances
 these values would not be as large (relatively to other coefficient values) because they too would be more penalized than for the graph we created from the lattice structure.
 
 
-```{r coef-plot-full-fused-og, eval=FALSE, fig.cap="Coefficient plot of the full fused lasso model."}
+```{r coef-plot-full-fused-noclust, eval=FALSE, fig.cap="Coefficient plot of the full fused lasso model."}
 coef_plot <- readRDS(paste0(path_to_model_folder,
                       "coef-plots/coef-plot-full.rds"))
 head(coef_plot)
@@ -264,9 +264,9 @@ $D^TD$ is still the Laplacian and could be used to fit the fused lasso model.
 One caveat here is that the runtime of the *fusedlasso* increases with the number of edges,
 which would increase runtime here drastically.
 Another possible solution would be to minimize the SST "window" under study (for
-example as in @ciemer2020 early.)
+example as in @ciemer2020early.)
 Our initial motivation was to investigate the global connections between
 SST and precipitation, but to reduce computational costs for the fused lasso
-it would be practical and investigate the behaviour of weighted fully connected
+it would be practical and investigate the behavior of weighted fully connected
 graphs it would be an interesting point of future research.
 
