--- a/thesis/index.Rmd
+++ b/thesis/index.Rmd
@@ -2,26 +2,29 @@
 author: "Dario Lepke"
 site: bookdown::bookdown_site
 output:
-  bookdown::pdf_book:
+  bookdown::pdf_document2:
+    extra_dependencies: ["float"]
     split_bib: FALSE
     latex_engine: xelatex
     includes:
       in_header: "preamble-only.tex"
       before_body: "body-only.tex"
   pdf_document:
+    extra_dependencies: ["flafter"]
     includes:
       in_header: "preamble-only.tex"
       before_body: "body-only.tex"
     latex_engine: xelatex
+  bookdown::pdf_book:
+    extra_dependencies: ["flafter"]
+    split_bib: FALSE
+    latex_engine: xelatex
+    includes:
+      in_header: "preamble-only.tex"
+      before_body: "body-only.tex"
   bookdown::gitbook:
     # split_by: section
     split_bib: FALSE
-  bookdown::pdf_document2:
-    split_bib: FALSE
-    latex_engine: xelatex
-    includes:
-      in_header: "preamble-only.tex"
-      before_body: "body-only.tex"
   bookdown::html_document2:
     split_bib: FALSE
 bibliography: ref-lib.bib
@@ -38,29 +41,29 @@ knitr::opts_chunk$set(echo=FALSE, warning = FALSE, message = FALSE, out.width = 
 options(knitr.duplicate.label = "allow")
 ```
 
-With future climate change droughts in the Amazon forest may become more
-frequent and/or severe. Droughts can turn Amazon regions from rain forest into
+With future climate change drought in the Amazon forest may become more
+frequent and severe. Rain shortages can turn Amazon regions from rain forests into
 savanna, leading to high amounts of carbon released into the atmosphere.
-Therefore, predicting future droughts and understanding the underlying mechanisms 
-is of great interest. @ciemer2020early, established an 
-early warning indicator for droughts in the central Amazon basin (CAB), based on tropical Atlantic sea surface 
-temperatures (SSTs). Inspired by their work, the aim of this thesis is to build up on this work and improve its
+Therefore, predicting future rainfall and understanding the underlying mechanisms 
+are of great interest. @ciemer2020early established an 
+early warning indicator for water deficits in the central Amazon basin (CAB) based on tropical Atlantic sea surface 
+temperatures (SSTs). Inspired by their work, this thesis aims to build up on this work and improve its
 predictive power by using different statistical methods.
-Here we seek to build a model that is able to predict monthly precipitation based on the
+Here we seek to build a model that can predict monthly precipitation based on the
 sea surface temperatures. 
-Also we want to identify those sea regions that are most important for doing so, making interpretability a point of interest, too.
+Also, we want to identify the most important sea regions for doing so, making interpretability a point of interest, too.
 Firstly we will analyze the data descriptively to 
 explore patterns and spatial dependencies.
-This includes a cluster analysis of the precipitation data
+Including a cluster analysis of the precipitation data
 in the central Amazon basin.
-Following we will compare two different regression approaches
-and their capability to predict precipitation as well as their interpretability of the SST regions selected by them.
-The first model is the lasso as proposed by @tibshirani1996regression. Comparing different model specifications we will carry on the findings from the lasso
+Following, we will compare two different regression approaches
+and their capability to predict precipitation and their interpretability of the SST regions selected by them.
+The first model is the lasso, as proposed by @tibshirani1996regression. Comparing different model specifications, we will carry on the findings from the lasso
 and fit a (sparse) fused lasso on the data (@tibshirani2005sparsity).
-Both models will be evaluated using a 5-fold forward selection,
-a model evaluation technique that takes into account the time dependencies present in the data at hand.
-We conclude with a summary of the findings in this work 
+Both models are evaluated using a 5-fold forward selection,
+a model evaluation technique that considers the time dependencies present in the data at hand.
+Finally, we summarize the findings in this work 
 and give an overview of strengths and limitations of the approaches used together with ideas for future research.
 
 
-This thesis was written and supervised in cooperation with Dr. Niklas Boers from the Potsdam Institute for Climate Impact Research (@PIC) and Dr. Fabian Scheipl (LMU)
+This thesis was written and supervised in cooperation with Dr. Niklas Boers from the Potsdam Institute for Climate Impact Research (@PIC) and Dr. Fabian Scheipl (LMU).
